# grok-tts-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/grok_tts_cli/: __init__.py  __main__.py  cli.py  client.py  voices.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_integration.py  test_voices.py
