[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grok-tts-cli"
version = "0.1.0"
description = "A command-line interface for xAI's Grok TTS API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Unispark Inc.", email = "hello@unispark.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.scripts]
grok-tts = "grok_tts_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/unispark-inc/grok-tts-cli"
Repository = "https://github.com/unispark-inc/grok-tts-cli"
Issues = "https://github.com/unispark-inc/grok-tts-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/grok_tts_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]
